--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-leaflet": "^4.2.1",
+    "resend": "^6.5.2",
     "sharp": "^0.34.5",
     "tailwind-merge": "2.5.2"
   },
